# InterviewMaster

./: .dockerignore  .env  Makefile  compose.yaml  pyproject.toml
app/models/: __init__.py  category.py  question.py  source.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: alembic.ini  main.py
backend/app/api/endpoints/: core.py
backend/app/core/: config.py  database.py
backend/app/exporters/: obsidian.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 573da4fb16f8_initial_tables.py
backend/app/models/: __init__.py  category.py  question.py  source.py
backend/app/scripts/: ollama-init.sh
backend/app/services/: category_loader.py  embeddings.py
backend/app/services/ai/: llm_client.py
backend/app/services/model_loader/: category_loader.py  question_loader.py  source_loader.py
backend/app/services/scrapers/: base.py  discovery.py  manager.py  web.py
backend/app/services/text/: deduplication.py
backend/app/utils/: __init__.py  hash.py  normalization.py
config/: .env  topics.json
scripts/: ollama-init.sh  run.py
